fixed bug regarding the overflow-x for mobile navbar

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 body {
     background-color: #f6f7f8;
+    overflow-x: hidden;
 }
 
 @font-face {
